# cmake_learning

./: .gitignore  CMakeLists.txt  Configure.h.in
five/: cmake语法规则
four/a/: CMakeLists.txt  Configure.h.in
four/a/mylib/: CMakeLists.txt
macro_function/: macro_function
mathfunction/: CMakeLists.txt  MakeTable.cpp  MathFunctions.h  mysqrt.cpp
one/a/: CMakeLists.txt  tutorial.cpp
one/b/: CMakeLists.txt  tutorial.cpp
process/: process
three/a/: CMakeLists.txt  TutorialConfig.h.in
three/a/mylib/: CMakeLists.txt  MathFunctions.h
tutorial/: tutorial.cpp  tutorial_b.cpp  tutorial_c.cpp
two/a/: CMakeLists.txt  tutorial.cpp
two/a/mylib/: CMakeLists.txt  mysqrt.cpp
